# RoiCropper

./: CMakeLists.txt  LICENSE  README.md  RoiCropper.cpp  RoiCropper.h
